--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=personRegister
+
+server.port=8080
+spring.jpa.show-sql=true
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS = false
+#DB config
+spring.datasource.url=jdbc:mysql://localhost:3306/people?useTimezone=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=#Parabelum91939
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#Create and update tables
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
